trying to fix newsCarousel arrows visibility, and contact form have a new mobile width

--- a/styles/Contact/Contact.module.css
+++ b/styles/Contact/Contact.module.css
@@ -32,6 +32,9 @@
   display: flex;
   margin-bottom: 40px;
 }
+.links p{
+  font-size: 1rem;
+}
 .links a{
   color: rgb(79, 79, 79);
   text-decoration: none;
@@ -39,4 +42,16 @@
 .links a:hover{
   color: rgb(136, 136, 136);
   text-decoration: none;
+}
+
+@media (width <= 991px){
+  .mainContainer{
+    margin-bottom: 60px;
+  }
+  .mainContainer form{
+    width: 90%;
+  }
+  .mainContainer form button{
+    margin-top: 10px;
+  }
 }
